--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "datatables.net-responsive-dt": "^2.3.0",
     "g": "^2.0.1",
     "jquery": "^3.6.0",
+    "perfect-scrollbar": "^1.5.5",
     "pouchdb-browser": "^7.3.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.24",
