Subida de documento pdf

--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "datatables.net-responsive": "^2.3.0",
     "datatables.net-responsive-dt": "^2.3.0",
     "g": "^2.0.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
     "perfect-scrollbar": "^1.5.5",
     "pouchdb-browser": "^7.3.0",
     "rxjs": "~7.5.0",
