--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "angular-datatables": "^14.0.0",
     "angular-ng-autocomplete": "^2.0.7",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.2",
     "crypto-js": "^4.1.1",
     "datatables.net": "^1.11.3",
